Fixed word wrap

--- a/components/demo-button/base-theme.less
+++ b/components/demo-button/base-theme.less
@@ -15,6 +15,7 @@
 	cursor: pointer;
 	font-size: 14px;
 	transition: all 0.25s ease 0s;
+	white-space: nowrap;
 
 	&:focus {
 		outline: none;
